# intentguard

./: .cdigestignore  .gitignore  AGENTS.md  Makefile  README.md  ROADMAP.md  pyproject.toml
.agents/skills/change-verification/: SKILL.md
.agents/skills/prepare-release/: SKILL.md
.github/: FUNDING.yml
.github/workflows/: main.yml
.mypy_cache/3.12/: re.meta.json  string.data.json  typing_extensions.data.json
.mypy_cache/3.12/_typeshed/: __init__.meta.json  importlib.data.json
.mypy_cache/3.12/collections/: abc.data.json
.mypy_cache/3.12/email/: errors.data.json  policy.data.json  policy.meta.json
.mypy_cache/3.12/importlib/metadata/: _meta.data.json
.mypy_cache/3.12/intentguard/: prompts.data.json
.mypy_cache/3.12/json/: decoder.data.json  encoder.data.json  encoder.meta.json
.mypy_cache/3.12/logging/: __init__.data.json  __init__.meta.json
.mypy_cache/3.12/os/: path.data.json
.mypy_cache/3.12/sys/: _monitoring.data.json  _monitoring.meta.json
.mypy_cache/3.12/tests/: test_cache.meta.json  test_intentguard.meta.json
.mypy_cache/3.12/unittest/: _log.data.json  _log.meta.json  result.data.json  result.meta.json  signals.meta.json
.mypy_cache/3.12/zipfile/: __init__.data.json  _path.data.json
ai_research/dataset_generation/: .gitignore  README.md  __main__.py  cli.py  diff.txt  go.mod  go.sum  main.go
ai_research/dataset_generation/cli/: filter.go  generate.go  root.go  transform.go
ai_research/dataset_generation/data/: filtering.txt  prompt.txt
ai_research/dataset_generation/domain/: assertion.go  assertion.py  assertion_test.go  category.go  category.py  code_object.go  code_object.py  example.go  example.py  example_test.go  llm_response.go  llm_response.py
ai_research/dataset_generation/infrastructure/: llm_provider.go  openai_client.py  prompts.go  prompts.py  storage.go  storage.py
ai_research/model_training/: Finetuning_Qwen2_5_Coder_1_5B_Instruct.ipynb  generate_alpaca.py  install.sh  intentguard_finetuning.py
ai_research/model_training/legacy/: intentguard_finetuning.py  requirements.txt  run.sh
ai_research/result/: IntentGuard-1.Modelfile
intentguard/: __init__.py  cache.py  intentguard.py  intentguard_options.py  prompts.py
intentguard/app/: intentguard.py  intentguard_options.py
intentguard/infrastructure/: llamafile.py  llamafile_prompt_factory.py  prompt_text.py
scripts/: prepare.py
tests/: __init__.py  logging_config.py  test_cache.py  test_dataset_generation.py  test_intentguard.py  test_llamafile_http_retry.py  test_llm_static_assert.py  test_module_api.py  test_packaging.py
validation/: README.md  helpers.py  requirements.txt  validate.py
(+4 files in other folders)
