[project]
name = "intentguard"
version = "2.1.2.dev0"
description = "A Python library for verifying code properties using natural language assertions."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kosma Dunikowski", email = "kosmadunikowski@gmail.com" }]
keywords = ["testing", "pytest", "unittest", "ai-testing", "llm", "code-verification", "natural-language", "test-automation", "code-quality", "language-models"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/kdunee/intentguard"
Repository = "https://github.com/kdunee/intentguard"

[dependency-groups]
dev = [
    "ruff>=0.15.11,<0.16",
    "mypy>=1.20.1,<2",
]


[tool.ruff]
target-version = "py310"

[tool.mypy]
files = "intentguard/**/*.py"
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["intentguard"]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"
